--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "mdb-react-ui-kit": "^5.1.0",
@@ -18,11 +20,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-minimal-pie-chart": "^8.4.0",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.3",
     "swiper": "^9.2.3",
-    "web-vitals": "^2.1.4"
+    "wagmi": "^1.3.10",
+    "web-vitals": "^2.1.4",
+    "web3": "^4.0.3",
+    "web3modal": "^1.9.12"
   },
   "scripts": {
     "start": "react-scripts start",
