--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.3",
     "swiper": "^9.2.3",
+    "viem": "^1.6.0",
     "wagmi": "^1.3.10",
     "web-vitals": "^2.1.4",
     "web3": "^4.0.3",
